# anthill-service-system

./: Cargo.toml  README.md
src/: application.rs  application_builder.rs  application_life_time.rs  error.rs  lib.rs  service.rs  service_system_configuration.rs  service_system_manager.rs  startup.rs
src/configs/: core_config.rs  mod.rs
src/extensions/: add_background_service_strategy.rs  add_configuration_strategy.rs  add_hosted_service_strategy.rs  add_service_extension.rs  add_snapshot_configuration_strategy.rs  mod.rs
src/life_time/: ctrlc_life_time_manager.rs  inner_state_life_time_manager.rs  life_time_manager.rs  mod.rs
src/service/: background_service.rs  hosted_service.rs  mod.rs  service_collection.rs  service_info.rs
src/services/: background_service.rs  base_service.rs  mod.rs
src/tests/: background_service.rs  background_service_from_ioc.rs  background_service_with_startup.rs  default.rs  hosted_service.rs  hosted_service_start_timeout.rs  hosted_service_stop_timeout.rs  mod.rs
src/types/: mod.rs  result.rs
src/utils/: cancellation_handler.rs  mod.rs  state_handler.rs
